# DataStructure-CMake-Template

./: CMakeLists.txt  README.md
.github/workflows/: cpplint.yml  cpplint_modified_files.yml
lib_example/: example.cpp  example.h
lib_matrix/: CMakeLists.txt  matrix.cpp  matrix.h
lib_queue/: queue.cpp  queue.h
main/: main.cpp
materials/: REPORT_Template.doc
materials/CODING_STYLE/: clean_code.pptx  coding_style.md
tests/: test_example.cpp  test_matrix.cpp
