# указывайте последнюю доступную вам версию CMake
cmake_minimum_required(VERSION 3.6 FATAL_ERROR)

# название проекта
project(ProgrammingLabsWork_2022_2023)

# затем следует список инструкций для подключения проектов из подкаталогов

include(cmake/function.cmake)    # подхватываем функции, реализованные в файле function.cmake
                                 # для простоты мы объединили наборы команд для создания статической библиотеки
								 # и для создания исполняемого проекта в отдельные функции

add_subdirectory(lib_matrix)     # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_matrix								 
add_subdirectory(lib_bitfield)   # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_bitfield
add_subdirectory(lib_set)        # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_set
add_subdirectory(lib_template)   # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_template
add_subdirectory(lib_stack)      # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_stack
add_subdirectory(lib_queue)      # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_queue
add_subdirectory(lib_example)    # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_example
add_subdirectory(lib_list)       # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_list
add_subdirectory(main)           # подключаем дополнительный CMakeLists.txt из подкаталога с именем main

option(BTEST "build test?" ON)   # указываем подключаем ли google-тесты (ON или YES) или нет (OFF или NO)

if(BTEST)                        # если тесты подключены
    add_subdirectory(gtest)      # подключаем дополнительный CMakeLists.txt из подкаталога с именем gtest
    add_subdirectory(tests)      # подключаем дополнительный CMakeLists.txt из подкаталога с именем test
endif()
